<resources>
    <string name="app_name">TakeLeapLiveTest</string>
    <string name="enter_text_hint">Enter Text</string>
    <string name="demo_text">Demo Text</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="default_tv_size">16</string>
    <string name="default_rotation">0</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
</resources>