<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idEDTText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="no"
        android:background="@null"
        android:hint="@string/enter_text_hint"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTVDraggableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/demo_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idEDTText" />

    <Button
        android:id="@+id/idBTNMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/minus"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/idBTNRotateLeft"
        app:layout_constraintEnd_toStartOf="@id/idBTNPlus"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idBTNPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/idBTNRotateRight"
        app:layout_constraintEnd_toStartOf="@id/idEDTCustomSize"
        app:layout_constraintStart_toEndOf="@id/idBTNMinus" />

    <EditText
        android:id="@+id/idEDTCustomSize"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:text="@string/default_tv_size"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/idEDTCustomRotation"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@id/idBTNPlus"
        app:layout_constraintTop_toTopOf="@+id/idBTNPlus"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/idBTNRotateLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/rotate_left"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/idBTNRotateRight"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idBTNRotateRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/rotate_right"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/idEDTCustomRotation"
        app:layout_constraintStart_toEndOf="@id/idBTNRotateLeft" />

    <EditText
        android:id="@+id/idEDTCustomRotation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:text="@string/default_rotation"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@id/idBTNRotateRight"
        app:layout_constraintTop_toTopOf="@+id/idBTNRotateRight"
        android:importantForAutofill="no"
        android:inputType="number" />
</androidx.constraintlayout.widget.ConstraintLayout>